--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "node-ensure": "^0.0.0",
     "pdf-parse": "^1.1.1",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.14.0"
   }
 }
